--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -4,20 +4,20 @@
 }
 
 .header-global .btn-neutral {
-	color: #ffffff;
+	color: #ffffff !important;
 }
 
-.header-global .left .list-inline .nav-global {
-	float: right;
+left list-inline nav-global {
+	float: right !important;
 }
 
-.header-global .btn-login {
-	box-shadow: none;
-	background-color: #ffffff;
-	color: #009edb;
-	border-color: #009edb;
-	border-width: 2px;
-	border-bottom-style: solid;
+.header-global .nav-courseware {
+	box-shadow: none !important;
+	background-color: #ffffff !important;
+	color: #009edb !important;
+	border-color: #009edb !important;
+	border-width: 2px !important;
+	border-bottom-style: solid !important;
 }
 
 
@@ -27,8 +27,11 @@
 
 .home > header {
 	background: url('../images/header_bg.jpg');
+	
 	background-size: cover;
-	background-position: 50% top;
+	-moz-background-size: 100%;
+	-moz-background-size: cover;
+	background-position: center top;
 
 	.outer-wrapper {
 		padding-top: 150px;
@@ -56,27 +59,47 @@
 //Footer
 
 .footer-main{
+	background-color: #242424;	
   padding: 2em 0;
-  border-top: 3px solid #1F1F1F;
   .logo{
     margin-bottom: 1em;
   }
+	
+	.colWrapper {
+	display: table;
+	width: 100%;
+	
+}
+
+
+.col {
+	display: table-cell;
+	vertical-align: middle;
+	width: 250px;
+	
+}
+	
+	
+	
   ul{
     list-style: none;
     margin-left: 1.5em;
     li{
-      color: #1F1F1F;
+      color: #a29c9a;
       padding: .3em 0;
       a{
-        font-size: 1em;
-        color: #1F1F1F !important;
+        font-size: 12px;
+        color: #a29c9a !important;
+		 font-weight: lighter;
         &:hover{
-          color: #1F1F1F !important;
+          color: #a29c9a !important;
           text-decoration: none;
         }
       }
       &:first-child{
-        font-weight:bold;
+		color: #a2a2a2 !important; 
+		text-transform:  capitalize;
+		  font-size: 14px;
       }
       &:last-child{
         margin-bottom: 2em;
