--- a/ck-theme/lms/templates/footer.html
+++ b/ck-theme/lms/templates/footer.html
@@ -1,58 +1,53 @@
 ## mako
 <%page expression_filter="h"/>
 <%namespace name='static' file='static_content.html'/>
-
 <section class="footer-main">
-<div class="grid-manual grid-container">
-  <div class="row">
-    <div class="col col-12 sm-col-12 md-col-4 footer-logo">
-      <ul>
+  <div class="grid-manual grid-container">
+    <div class="row">
+      <div class="col col-12 sm-col-12 md-col-4 footer-logo">
+        <ul>
           <li><a href="/"><img src="${static.url('images/logo_small.png')}" alt="Combined Knowledge" /></a></li>
-          <li><a href="https://www.combined-knowledge.com">More about Combined Knowledge</a></li>
-      </ul>
-    </div>
-    <div class="col col-12 sm-col-12 md-col-4">
-      <div class="col col-6">
-      <ul>
-        <li>About</li>
-        <li><a href="/about">About this Site</a></li>
-        <li><a href="/faq">FAQ</a></li>
-        <li><a href="/contact">Contact Us</a></li>
-      </ul>
-    </div>
+        </ul>
+      </div>
+      
+		<div class="colWrapper">
+        <div class="col col-6">
+          <ul>
+            <li>About</li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/about-us/" target="_blank">About Combined Knowledge</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/contact-us/" target="_blank">Contact Us</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/terms-and-conditions/" target="_blank">Terms of Service</a></li>
+          </ul>
+        </div>
+        <div class="col col-6">
+          <ul>
+            <li>Solutions</li>
+            <li><a href="https://www.combined-knowledge.com/index.php/training-courses/find-a-course/" target="_blank">Instructor Led training</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/learning-support-tools/office_365_trainingplus/" target="_blank">Training+ App</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/learning-support-tools/support-2/" target="_blank">Support+ App</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/learning-support-tools/office/" target="_blank">Office+ Office 365 Add-In</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/learning-support-tools/cbt-2/" target="_blank">CBT</a></li>
+          </ul>
+        </div>
+      
 
-    <div class="col col-6">
-      <ul>
-        <li>Support</li>
-        <li><a href="/tos">Terms of Service</a></li>
-        <li><a href="/privacy">Privacy Policy</a></li>
-        <li><a href="/honor">Honor Code</a></li>
-      </ul>
+        <div class="col col-6">
+          <ul>
+            <li>Connect</li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/contact-us/">Contact Us</a></li>
+            <li><a href="https://www.facebook.com/pages/Combined-Knowledge-Ltd/130405933644168">Facebook</a></li>
+            <li><a href="https://twitter.com/ckukltd">Twitter</a></li>
+            <li><a href="http://www.linkedin.com/company/113488?trk=tyah&trkInfo=tarId%3A1400000150305%2Ctas%3ACombined%20K%2Cidx%3A1-1-1">LinkedIn</a></li>
+            <li><a href="http://www.youtube.com/user/combinedknowledge">YouTube</a></li>
+          </ul>
+        </div>
+		</div>
+        <div class="col col-6 open-edx-logo">
+          <ul>
+            <li> <a href="https://open.edx.org"> <img src="${static.url('images/openedx-logo-tag.png')}" alt="openedx-logo" /> </a> </li>
+          </ul>
+        </div>
+      
     </div>
-    </div>
-    <div class="col col-12 sm-col-12 md-col-4">
-      <div class="col col-6">
-      <ul>
-        <li>Connect</li>
-        <li><a href="https://www.facebook.com/pages/Combined-Knowledge-Ltd/130405933644168">Facebook</a></li>
-        <li><a href="https://twitter.com/ckukltd">Twitter</a></li>
-        <li><a href="http://www.linkedin.com/company/113488?trk=tyah&trkInfo=tarId%3A1400000150305%2Ctas%3ACombined%20K%2Cidx%3A1-1-1">LinkedIn</a></li>
-        <li><a href="http://www.youtube.com/user/combinedknowledge">YouTube</a></li>
-      </ul>
-    </div>
-
-    <div class="col col-6 open-edx-logo">
-      <ul>
-        <li>
-          <a href="https://open.edx.org">
-            <img src="${static.url('images/openedx-logo-tag.png')}" alt="openedx-logo" />
-          </a>
-        </li>
-      </ul>
-    </div>
-    </div>
-
-
   </div>
-</div>
 </section>
