--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -1,3 +1,8 @@
+h1, h2, h3, h4, h5, h6 p, li, body {
+	font-family: "proxima-nova", sans-serif !important;
+	font-weight: lighter !important;
+}
+
 .header-global {
 	background-color: #242424;
 	border-bottom: none;
@@ -66,15 +71,17 @@ left list-inline nav-global {
   }
 	
 	.colWrapper {
-	display: table;
 	width: 100%;
+  margin: 0 auto;
+  position: relative;
+  text-align:center;
 	
 }
 
 
 .col {
-	display: table-cell;
-	vertical-align: middle;
+	display:inline-block;
+  margin: 10px;
 	width: 250px;
 	
 }
