--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -70,11 +70,12 @@ left list-inline nav-global {
     margin-bottom: 1em;
   }
 	
-	.colWrapper {
+	.row {
 	width: 100%;
   margin: 0 auto;
   position: relative;
   text-align:center;
+		vertical-align: top;
 	
 }
 
@@ -83,6 +84,7 @@ left list-inline nav-global {
 	display:inline-block;
   margin: 10px;
 	width: 250px;
+	vertical-align: top;
 	
 }
 	
@@ -105,7 +107,7 @@ left list-inline nav-global {
       }
       &:first-child{
 		color: #a2a2a2 !important; 
-		text-transform:  capitalize;
+		text-transform:  uppercase;
 		  font-size: 14px;
       }
       &:last-child{
