--- a/ck-theme/lms/templates/footer.html
+++ b/ck-theme/lms/templates/footer.html
@@ -1,17 +1,22 @@
 ## mako
 <%page expression_filter="h"/>
 <%namespace name='static' file='static_content.html'/>
+
+<style>
+  @import url("https://use.typekit.net/ruh6gmc.css");
+</style>
 <section class="footer-main">
   <div class="grid-manual grid-container">
     <div class="row">
-      <div class="col col-12 sm-col-12 md-col-4 footer-logo">
+      <div class="col footer-logo">
         <ul>
           <li><a href="/"><img src="${static.url('images/logo_small.png')}" alt="Combined Knowledge" /></a></li>
         </ul>
       </div>
+	  </div>
       
-		<div class="colWrapper">
-        <div class="col col-6">
+		<div class="row">
+        <div class="col">
           <ul>
             <li>About</li>
             <li><a href="https://www.combined-knowledge.com/index.php/home/about-us/" target="_blank">About Combined Knowledge</a></li>
@@ -19,7 +24,7 @@
             <li><a href="https://www.combined-knowledge.com/index.php/home/terms-and-conditions/" target="_blank">Terms of Service</a></li>
           </ul>
         </div>
-        <div class="col col-6">
+        <div class="col">
           <ul>
             <li>Solutions</li>
             <li><a href="https://www.combined-knowledge.com/index.php/training-courses/find-a-course/" target="_blank">Instructor Led training</a></li>
@@ -31,7 +36,7 @@
         </div>
       
 
-        <div class="col col-6">
+        <div class="col">
           <ul>
             <li>Connect</li>
             <li><a href="https://www.combined-knowledge.com/index.php/home/contact-us/">Contact Us</a></li>
@@ -42,11 +47,13 @@
           </ul>
         </div>
 		</div>
-        <div class="col col-6 open-edx-logo">
+	  <div class="row">
+        <div class="col open-edx-logo">
           <ul>
             <li> <a href="https://open.edx.org"> <img src="${static.url('images/openedx-logo-tag.png')}" alt="openedx-logo" /> </a> </li>
           </ul>
         </div>
+	  </div>
       
     </div>
   </div>
