--- a/ck-theme/lms/templates/footer - Copy.html
+++ b/ck-theme/lms/templates/footer - Copy.html
@@ -40,20 +40,10 @@
           <ul>
             <li>Connect</li>
             <li><a href="https://www.combined-knowledge.com/index.php/home/contact-us/">Contact Us</a></li>
-            <li>T: +44 (0)1455 200 520&lt;br /&gt;<br>
-E: &lt;a href=&quot;mailto:sales@combined-knowledge.com&quot;&gt;sales@combined-knowledge.com&lt;/a&gt;</li>
-            <li>
-              <table style="width: 200px;">
-                <tbody>
-                  <tr>
-                    <td style="width: 25%;"><a href="https://www.facebook.com/pages/Combined-Knowledge-Ltd/130405933644168"><img class="alignnone wp-image-26625 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/011.png" alt="" width="25" height="25" /></a></td>
-                    <td style="width: 25%;"><a href="https://twitter.com/ckukltd"><img class="alignnone wp-image-26626 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/021.png" alt="" width="25" height="25" /></a></td>
-                    <td style="width: 25%;"><a href="http://www.youtube.com/user/combinedknowledge"><img class="alignnone wp-image-26629 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/05.png" alt="" width="25" height="25" /></a></td>
-                    <td style="width: 25%;"><a href="http://www.linkedin.com/company/113488?trk=tyah&amp;trkInfo=tarId%3A1400000150305%2Ctas%3ACombined%20K%2Cidx%3A1-1-1"><img class="alignnone wp-image-26659 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/LinkedIn-icon_small.png" alt="" width="25" height="25" /></a></td>
-                  </tr>
-                </tbody>
-              </table>
-            </li>
+            <li><a href="https://www.facebook.com/pages/Combined-Knowledge-Ltd/130405933644168">Facebook</a></li>
+            <li><a href="https://twitter.com/ckukltd">Twitter</a></li>
+            <li><a href="http://www.linkedin.com/company/113488?trk=tyah&trkInfo=tarId%3A1400000150305%2Ctas%3ACombined%20K%2Cidx%3A1-1-1">LinkedIn</a></li>
+            <li><a href="http://www.youtube.com/user/combinedknowledge">YouTube</a></li>
           </ul>
         </div>
 		</div>
