--- a/ck-theme/lms/templates/footer.html
+++ b/ck-theme/lms/templates/footer.html
@@ -40,10 +40,10 @@
           <ul>
             <li>Connect</li>
             <li><a href="https://www.combined-knowledge.com/index.php/home/contact-us/">Contact Us</a></li>
-            <li>T: +44 (0)1455 200 520&lt;br /&gt;<br>
-E: &lt;a href=&quot;mailto:sales@combined-knowledge.com&quot;&gt;sales@combined-knowledge.com&lt;/a&gt;</li>
-            <li>
-              <table style="width: 200px;">
+            <li>T: +44 (0)1455 200 520<br>
+				E: <a href="mailto:sales@combined-knowledge.com">sales@combined-knowledge.com</a></li>
+          </ul>
+              <table style="width: 200px; margin: 0 auto;">
                 <tbody>
                   <tr>
                     <td style="width: 25%;"><a href="https://www.facebook.com/pages/Combined-Knowledge-Ltd/130405933644168"><img class="alignnone wp-image-26625 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/011.png" alt="" width="25" height="25" /></a></td>
@@ -53,8 +53,7 @@ E: &lt;a href=&quot;mailto:sales@combined-knowledge.com&quot;&gt;sales@combined-
                   </tr>
                 </tbody>
               </table>
-            </li>
-          </ul>
+            
         </div>
 		</div>
 	  <div class="row">
