--- a/ck-theme/lms/templates/header.html
+++ b/ck-theme/lms/templates/header.html
@@ -9,18 +9,18 @@ from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_
 %>
 
 
-<header id="global-navigation" class="header-main" >
+<header id="global-navigation" class="header-global" >
   <nav class="nav-wrapper" aria-label="${_('Global')}">
     <div class="grid-manual grid-container">
         <div  class="row">
-          <div class="col col-6 sm-col-4 md-col-4 lg-col-3 xl-col-3">
+          <div class="col logo">
             <div class="logo">
               <a href="${marketing_link('ROOT')}">
-                <img src="http://placehold.it/190x60" alt="Home Page" />
+                <img src="${static.url('images/logo.png')}" alt="Combined Knowledge" />
               </a>
             </div>
           </div>
-        <div class="col col-6 sm-col-8 md-col-8 lg-col-6 xl-col-6 pull-right">
+        <div class="col ">
           <div class="navbar-collapse">
             <div class="collapsed-button">
               <span></span><span></span><span></span>
