--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -56,9 +56,92 @@ h1, h2, h3, h4, h5, h6 p, li, body {
 }
 
 
-.header-global h1.logo img {
+.header-global .logo img {
 	max-height: 40px;
 }
+
+.header-global .list-inline{
+    transition: all .2s;
+    position: absolute;
+    top: 100px;
+    border-top: 1px solid $light;
+    right: 0;
+    left: 0;
+    background-color: $white;
+    z-index: 10;
+    box-shadow: 0px 2px 3px $light;
+    padding: 1rem 0;
+    li{
+      float: right;
+      display: inline-block;
+      vertical-align: middle;
+      line-height: normal;
+      padding: 0.5rem;
+      font-size: 1rem;
+      width: 100%;
+      text-align: center;
+      a{
+        line-height: normal;
+        color: $x-dark;
+      }
+      &.user-account{
+        margin-right: 1rem;
+        position: relative;
+        .user-img{
+          display: inline-block;
+          width: 50px;
+          height: 50px;
+          line-height: 100px;
+          vertical-align: middle;
+          margin-right: 0.6rem;
+          img {
+            vertical-align: top;
+            width: 100%;
+          }
+        }
+        .user-name{
+          cursor: pointer;
+          position: relative;
+          display: inline-block;
+          &:after{
+            content: "\f0d7";
+            position: absolute;
+            right: -1rem;
+            font-family: 'FontAwesome';
+            top: 0.2rem;
+          }
+        }
+        ul{
+          display: none;
+          position: relative;
+          background-color: $white;
+          box-shadow: 0px 2px 24px rgba(0,0,0,0.3);
+          width: 50%;
+          margin: auto;
+          margin-top: 0.5rem;
+          border: 1px solid $light;
+          li{
+            border-bottom: 1px solid lighten($light, 10%);
+            background: $white;
+            float: none;
+            a{
+              display: block;
+            }
+          }
+          &:before{
+            content: "\f0d8";
+            position: absolute;
+            font-family: 'FontAwesome';
+            right: 1rem;
+            top: -20px;
+            color: $white;
+            font-size: 2rem;
+            line-height: normal;
+          }
+        }
+      }
+    }
+  }
 
 .home > header {
 	background: url('../images/header_bg.jpg');
