--- a/ck-theme/lms/templates/header.html
+++ b/ck-theme/lms/templates/header.html
@@ -43,14 +43,14 @@ from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_
                 </li>
               % else:
               <li>
-                <a class="btn-brand btn-client" href="/register${login_query()}">${_("Create Account")}</a>
+                <a class="brand-link" href="/register${login_query()}">${_("Create Account")}</a>
               </li>
               <li>
-                <a href="/login${login_query()}" class="brand-link">${_("Sign in")}</a>
+                <a href="/login${login_query()}" class="btn-brand btn-client">${_("Sign in")}</a>
               </li>
             % endif
               <li>
-                <a href="/courses" class="brand-link">${_("Courses")}</a>
+                <a href="/courses" class="brand-link">${_("View Courses")}</a>
               </li>
             </ul>
           </div>
