--- a/ck-theme/lms/templates/header.html
+++ b/ck-theme/lms/templates/header.html
@@ -16,7 +16,7 @@ from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_
           <div class="col logo">
             <div class="logo">
               <a href="${marketing_link('ROOT')}">
-                <img src="${static.url('images/logo.png')}" alt="Combined Knowledge" />
+                <img src="${static.url('images/logo.png')}" alt="Combined Knowledge" class="logo" />
               </a>
             </div>
           </div>
