modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -55,11 +55,11 @@ h1, h2, h3, h4, h5, h6 p, li, body {
         }
 }
 
-.header-global .logo {
+.header-global .row .logo {
 	float: left;
 }
 
-.header-global .logo img {
+.header-global .row .logo img {
 	max-height: 40px !important;
 }
 
