modified:   ck-theme/lms/static/sass/_overrides.scss 	modified:   ck-theme/lms/templates/header.html

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6 p, li, body {
 	float: left;
 }
 
-.header-global .row .logo img {
+.header-logo{
 	max-height: 40px !important;
 }
 
