--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -69,13 +69,11 @@ h1, h2, h3, h4, h5, h6 p, li, body {
     transition: all .2s;
     position: absolute;
     top: 100px;
-    border-top: 1px solid $light;
     float: right;
 	width: 70%;
-    background-color: $white;
     z-index: 10;
-    box-shadow: 0px 2px 3px $light;
     padding: 2% 0;
+	color: #ffffff;
     li{
       float: right;
       display: inline-block;
@@ -87,7 +85,7 @@ h1, h2, h3, h4, h5, h6 p, li, body {
       text-align: center;
       a{
         line-height: normal;
-        color: $x-dark;
+        color: #ffffff;
       }
       &.user-account{
         margin-right: 1rem;
@@ -119,15 +117,12 @@ h1, h2, h3, h4, h5, h6 p, li, body {
         ul{
           display: none;
           position: relative;
-          background-color: $white;
-          box-shadow: 0px 2px 24px rgba(0,0,0,0.3);
           width: 50%;
           margin: auto;
           margin-top: 0.5rem;
-          border: 1px solid $light;
+          color: #ffffff;
           li{
-            border-bottom: 1px solid lighten($light, 10%);
-            background: $white;
+            border-bottom: 1px solid lighten(#ffffff, 10%);
             float: none;
             a{
               display: block;
@@ -139,7 +134,7 @@ h1, h2, h3, h4, h5, h6 p, li, body {
             font-family: 'FontAwesome';
             right: 1rem;
             top: -20px;
-            color: $white;
+            color: #ffffff;
             font-size: 2rem;
             line-height: normal;
           }
