--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -10,18 +10,18 @@ h1, h2, h3, h4, h5, h6 p, li, body {
 
 
 .header-global .row {
-	width: 100%;
-  	margin: 0 auto;
+	margin: 0 auto;
   	position: relative;
-  	text-align:center;
+  	text-align: right;
 	vertical-align: top;
+	height: 40px;
 	
 }
 
 
 .header-global .col {
-	display:inline-block;
- 	 margin: 10px;
+	display: inline-block;
+ 	margin-left: 10px;
 	width: 300px;
 	vertical-align: top;
 	
@@ -60,7 +60,7 @@ h1, h2, h3, h4, h5, h6 p, li, body {
 }
 
 .header-logo{
-	height: 40px;
+	max-height: 40px;
 }
 
 
