--- a/ck-theme/lms/templates/header.html
+++ b/ck-theme/lms/templates/header.html
@@ -14,31 +14,31 @@ from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_
 	<div class="logo"> <a href="${marketing_link('ROOT')}"> <img src="${static.url('images/logo.png')}" alt="Combined Knowledge" class="header-logo"/> </a> </div>
 	
 <div  class="row">
-  <div class="col ">
-    <div class="navbar-collapse">
-      <div class="collapsed-button"> <span></span><span></span><span></span> </div>
-      <ul class="list-inline">
+  
+   
+      
         % if user.is_authenticated():
         <%
                   username = user.username
                   profile_image_url = get_profile_image_urls_for_user(user)['medium']
                 %>
-        <li class="user-account"> <span class="user-img"><img src="${profile_image_url}" alt=""></span> <span class="user-name">${username}</span>
-          <ul>
-            <li><a href="${reverse('dashboard')}">${_("Dashboard")}</a></li>
-            <li><a href="${reverse('learner_profile', kwargs={'username': user.username})}">${_("Profile")}</a></li>
-            <li><a href="${reverse('account_settings')}">${_("Account")}</a></li>
-            <li><a href="${reverse('logout')}">${_("Sign Out")}</a></li>
-          </ul>
-        </li>
+        
+			<div class="col user-account"> <span class="user-img"><img src="${profile_image_url}" alt=""></span> <span class="user-name">${username}</span>
+          
+            <div class="col"><a href="${reverse('dashboard')}">${_("Dashboard")}</a></div>
+            <div class="col"><a href="${reverse('learner_profile', kwargs={'username': user.username})}">${_("Profile")}</a></div>
+            <div class="col"><a href="${reverse('account_settings')}">${_("Account")}</a></div>
+            <div class="col"><a href="${reverse('logout')}">${_("Sign Out")}</a></div>
+          
+        </div>
         % else:
-        <li> <a class="brand-link" href="/register${login_query()}">${_("Create Account")}</a> </li>
-        <li> <a href="/login${login_query()}" class="btn-brand btn-client">${_("Sign in")}</a> </li>
+        <div class="col"> <a class="brand-link" href="/register${login_query()}">${_("Create Account")}</a> </div>
+        <div class="col"> <a href="/login${login_query()}" class="btn-brand btn-client">${_("Sign in")}</a> </div>
         % endif
-        <li> <a href="/courses" class="brand-link">${_("View Courses")}</a> </li>
-      </ul>
-    </div>
-  </div>
+        <div class="col"> <a href="/courses" class="brand-link">${_("View Courses")}</a> </div>
+      
+    
+  
 </div>
 </nav>
 </header>
