modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -44,7 +44,7 @@ header.header-global {
         background-color: transparent;
         border: 0;
         color: #009EDB;
-        "proxima-nova", sans-serif;
+        font-family: "proxima-nova", sans-serif;
 		font-weight: lighter;
         font-style: normal;
         padding: 0 20px;
