modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -80,8 +80,9 @@ header.header-global {
       border-bottom: 0 !important;
       img{
         vertical-align: middle;
-        width: auto;
-        height: auto;
+		height: 40px;
+		width: auto;
+
       }
     }
   }
