new file:   ck-theme/lms/static/images/about-img.png 	new file:   ck-theme/lms/static/images/course-thumbnail.jpg 	deleted:    ck-theme/lms/static/images/header_bg.jpg 	new file:   ck-theme/lms/static/images/hero-course-catalog.png 	new file:   ck-theme/lms/static/images/hero-course-detail.jpg 	new file:   ck-theme/lms/static/images/hero-home-page.jpg 	deleted:    ck-theme/lms/static/images/logo.png 	deleted:    ck-theme/lms/static/images/logo_small.png 	new file:   ck-theme/lms/static/images/openedx-logo.png 	new file:   ck-theme/lms/static/images/page-heading.png 	new file:   ck-theme/lms/static/images/user-thumbnail.png 	new file:   ck-theme/lms/static/images/vid-btn.png 	new file:   ck-theme/lms/static/images/vid-img.jpg 	new file:   ck-theme/lms/static/js/about-site.js 	new file:   ck-theme/lms/static/js/animation-scroll.js 	new file:   ck-theme/lms/static/js/contact-form.js 	new file:   ck-theme/lms/static/js/course-about.js 	new file:   ck-theme/lms/static/js/leanModal.js 	new file:   ck-theme/lms/static/js/slick.min.js 	new file:   ck-theme/lms/static/js/sticky.js 	new file:   ck-theme/lms/static/sass/_accordion.scss 	deleted:    ck-theme/lms/static/sass/_overrides - Copy.scss 	modified:   ck-theme/lms/static/sass/_overrides.scss 	new file:   ck-theme/lms/static/sass/base/_variables.scss 	deleted:    ck-theme/lms/static/sass/lms-main-v1-rtl.scss 	modified:   ck-theme/lms/static/sass/lms-main-v1.scss 	new file:   ck-theme/lms/static/sass/lms-main-v2.scss 	new file:   ck-theme/lms/static/sass/slick.scss 	new file:   ck-theme/lms/templates/about_site.html 	new file:   ck-theme/lms/templates/course.html 	new file:   ck-theme/lms/templates/courses_list.html 	new file:   ck-theme/lms/templates/courseware/course_about.html 	new file:   ck-theme/lms/templates/courseware/courses.html 	deleted:    ck-theme/lms/templates/footer - Copy.html 	modified:   ck-theme/lms/templates/footer.html 	new file:   ck-theme/lms/templates/head-extra.html 	modified:   ck-theme/lms/templ

--- a/ck-theme/lms/templates/header.html
+++ b/ck-theme/lms/templates/header.html
@@ -7,16 +7,16 @@ from django.utils.translation import ugettext as _
 from django.core.urlresolvers import reverse
 from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_image_urls_for_user
 %>
-	
-	
-<header id="global-navigation" class="header-global" >
+
+
+<header id="global-navigation" class="header-main" >
   <nav class="nav-wrapper" aria-label="${_('Global')}">
     <div class="grid-manual grid-container">
         <div  class="row">
           <div class="col col-6 sm-col-4 md-col-4 lg-col-3 xl-col-3">
             <div class="logo">
               <a href="${marketing_link('ROOT')}">
-                <img src="${static.url('images/logo.png')}" alt="Home Page" />
+                <img src="http://placehold.it/190x60" alt="Home Page" />
               </a>
             </div>
           </div>
@@ -58,8 +58,7 @@ from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_
       </div>
       </nav>
 </header>
-	  
-	  
+
 <script>
   $( ".collapsed-button" ).click(function() {
     $(".navbar-collapse .list-inline").toggleClass("show-menu");
@@ -70,4 +69,4 @@ from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_
   });
 
 
-</script> 
+</script>
