--- a/ck-theme/lms/templates/course.html
+++ b/ck-theme/lms/templates/course.html
@@ -18,7 +18,7 @@ from django.core.urlresolvers import reverse
         <span class="course-organization">${course.display_org_with_default}</span>
         <span class="course-title">${course.display_name}</span>
       </h2>
-      <div class="course-date" aria-hidden="true">${course.start_datetime_text()} - ${course.end_datetime_text()}</div>
+      <!--<div class="course-date" aria-hidden="true">${course.start_datetime_text()} - ${course.end_datetime_text()}</div>-->
     </div>
     <div class="sr">
       <ul>
