modified:   ck-theme/lms/templates/course.html

--- a/ck-theme/lms/templates/course.html
+++ b/ck-theme/lms/templates/course.html
@@ -24,7 +24,7 @@ from django.core.urlresolvers import reverse
       <ul>
       <li>${course.display_org_with_default}</li>
       <li>${course.display_name}</li>
-      <li>${_("Starts")}: <time itemprop="startDate" datetime="${course.start_datetime_text()}">${course.start_datetime_text()}</time></li>
+      <!--<li>${_("Starts")}: <time itemprop="startDate" datetime="${course.start_datetime_text()}">${course.start_datetime_text()}</time></li>-->
     </ul>
     </div>
   </a>
