--- a/ck-theme/lms/static/sass/base/_variables.scss
+++ b/ck-theme/lms/static/sass/base/_variables.scss
@@ -2,15 +2,15 @@
 
 $white: #ffffff;
 $body-background-color: $white;
-$x-dark: #34383a;
-$light: #d2d0d0;
+$x-dark: #666666;
+$light: #f7f7f8;
 $dark: #6b6969;
 $course-section-background-color: #f7f7f7;
-$brand-color: $dark;;
+$brand-color: #009edb;;
 $base: #9b9b9b;
 $success-base: #25b85a;
 $error-base: #b20610;
-$brand-font: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+$brand-font: "proxima-nova", sans-serif;
 $action-primary-fg: $brand-color;
 $action-primary-bg: lighten($brand-color, 10%);
 $action-primary-shadow: $brand-color !default;
