modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -312,7 +312,7 @@ h1, h2, h3, h4, h5, h6{
 //Header
 header.header-main {
   min-height: 100px;
-	background-color: :$dark;
+	background-color: $dark;
   .navbar-collapse{
     .collapsed-button{
       position: absolute;
