new file:   ck-theme/lms/static/images/header_bg.jpg 	modified:   ck-theme/lms/static/sass/_overrides.scss 	modified:   ck-theme/lms/static/sass/base/_variables.scss 	modified:   ck-theme/lms/templates/header.html 	modified:   ck-theme/lms/templates/index.html

--- a/ck-theme/lms/templates/header.html
+++ b/ck-theme/lms/templates/header.html
@@ -49,11 +49,11 @@ from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_
                 <a class="btn-brand btn-client" href="/register${login_query()}">${_("Create Account")}</a>
               </li>
               <li>
-                <a href="/login${login_query()}" class="brand-link">${_("Sign in")}</a>
+                <a href="/login${login_query()}" class="header-link">${_("Sign in")}</a>
               </li>
             % endif
               <li>
-                <a href="/courses" class="brand-link">${_("Courses")}</a>
+                <a href="/courses" class="header-link">${_("Courses")}</a>
               </li>
             </ul>
           </div>
