--- a/ck-theme/lms/templates/index.html
+++ b/ck-theme/lms/templates/index.html
@@ -26,7 +26,7 @@ from django.core.urlresolvers import reverse
 
 <section class="home">
   <header class="hero-main hero">
-    <div class="tint-dark">
+    <div class="">
       <div class="grid-container grid-manual">
         <div class="row">
           <div class="col col-10 sm-col-10 md-col-10 lg-col-8 xl-col-6 text-tint">
