--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -327,6 +327,10 @@ header.header-main {
         background-color: $x-dark;
         margin-bottom: 3px;
       }
+		header-link {
+			color: $white;
+			
+		}
     }
     ul{
       display: none;
@@ -476,6 +480,7 @@ header.header-main {
 
 .hero {
   min-height: 22em;
+	
   position: relative;
   z-index: 0;
   background-size: cover !important;
@@ -531,11 +536,11 @@ header.header-main {
     }
   }
   &.hero-main{
-    background: url("../images/hero-home-page.png") no-repeat top center !important;
+    background: url("../images/header_bg.png") no-repeat 30% center !important;
     background-size: cover !important;
   }
   &.hero-catalog{
-    background: url("../images/hero-course-catalog.jpg") no-repeat top center !important;
+    background: url("../images/header_bg.png") no-repeat 30% center !important;
     background-size: cover !important;
   }
   &.hero-video{
