modified:   ck-theme/lms/static/sass/_overrides.scss 	modified:   ck-theme/lms/static/sass/base/_variables.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -328,7 +328,9 @@ header.header-main {
         margin-bottom: 3px;
       }
 		header-link {
-			color: $white;
+			color: $white !important;
+			display: inline;
+      		margin: 0;
 			
 		}
     }
