--- a/ck-theme/lms/static/sass/base/_variables.scss
+++ b/ck-theme/lms/static/sass/base/_variables.scss
@@ -4,7 +4,7 @@ $white: #ffffff;
 $body-background-color: $white;
 $x-dark: #242424;
 $light: #f7f7f8;
-$dark: #6b6969;
+$dark: #242424;
 $course-section-background-color: #f7f7f7;
 $brand-color: #009edb;;
 $base: #9b9b9b;
