--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -99,9 +99,9 @@ h2{
   text-transform: none;
 	font-weight: lighter;	
 }
-h1, h2, h3, h4, h5, h6{
-  font-family: $brand-font;
-	font-weight: lighter;
+h1, h2, h3, h4, h5, h6 p, li, body {
+	font-family: "proxima-nova", sans-serif !important;
+	font-weight: lighter !important;
 }
 .col-centered{
   float: none !important;
@@ -560,8 +560,8 @@ header.header-main {
           .data{
             padding: 7% 0 0 0;
             h1{
-            font-size: 1.5rem;
-            color: $black;
+            font-size: 5.5rem;
+            color: $white;
             line-height: normal;
             padding-left: 1rem;
             text-align: left;
