--- a/ck-theme/lms/templates/index.html
+++ b/ck-theme/lms/templates/index.html
@@ -28,8 +28,8 @@ from django.core.urlresolvers import reverse
   <header class="hero-main hero">
     <div class="">
       <div class="grid-container grid-manual">
-        <div class="row">
-            <h1>Combined Knowledge<br />Your eLearning Portal</h1>
+        <div class="row" style="text-align: center">
+            <h1>THE GLOBAL ELEARNING PORTAL</h1>
             % if show_homepage_promo_video:
               <a href="#video-modal" class="btn-neutral btn-large" rel="leanModal">Watch video <i class="fa fa-play"></i></a>
             % endif
