modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -548,7 +548,8 @@ header.header-main {
             color: $white;
 		text-align: center;
 		display: inline-block;
-		width: 100%
+		width: 100%;
+			margin-top: 20%
 	  }
   }
   &.hero-catalog{
