--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -543,13 +543,14 @@ header.header-main {
     background: url("../images/header_bg.jpg") no-repeat top center !important;
     background-size: cover !important;
 	  text-align: center;
+	  padding-top: 20%;
+	  min-height: 40%;
 	h1{
             font-size: 3rem;
             color: $white;
 		text-align: center;
 		display: inline-block;
 		width: 100%;
-			margin-top: 20%
 	  }
   }
   &.hero-catalog{
@@ -564,7 +565,7 @@ header.header-main {
       position: absolute;
       right: 0;
       left: 0;
-      min-height: 40%;
+    //  min-height: 40%;
     }
 
     .grid-container{
