modified:   ck-theme/lms/static/sass/_overrides.scss

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -543,7 +543,7 @@ header.header-main {
     background: url("../images/header_bg.jpg") no-repeat top center !important;
     background-size: cover !important;
 	  text-align: center;
-	  padding-top: 20%;
+	  padding-top: 5%;
 	  min-height: 40%;
 	h1{
             font-size: 3rem;
@@ -565,6 +565,7 @@ header.header-main {
       position: absolute;
       right: 0;
       left: 0;
+		width: 100% !important;
     //  min-height: 40%;
     }
 
