modified:   ck-theme/lms/static/sass/_overrides.scss 	modified:   ck-theme/lms/templates/courses_list.html 	modified:   ck-theme/lms/templates/footer.html 	copied:     ck-theme/lms/templates/footer.html -> ck-theme/lms/templates/footer_OLD.html 	modified:   ck-theme/lms/templates/index.html

--- a/ck-theme/lms/templates/index.html
+++ b/ck-theme/lms/templates/index.html
@@ -29,7 +29,8 @@ from django.core.urlresolvers import reverse
     <div class="">
       <div class="grid-container grid-manual">
         <div class="row" style="text-align: center">
-            <h1>THE GLOBAL ELEARNING PORTAL</h1>
+            <h1>YOUR GLOBAL ELEARNING PORTAL<br>
+            _____________________</h1>
             % if show_homepage_promo_video:
               <a href="#video-modal" class="btn-neutral btn-large" rel="leanModal">Watch video <i class="fa fa-play"></i></a>
             % endif
