--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -8,6 +8,7 @@ body{
   .content-wrapper{
     max-width: none;
 	  padding-top: 0px !important;
+	  padding-bottom: 0px !important;
   }
 }
 //Helper Classes
@@ -540,11 +541,11 @@ header.header-main {
     }
   }
   &.hero-main{
-    background: url("../images/header_bg.jpg") no-repeat top center !important;
+    background: url("../images/header_bg.jpg") no-repeat center 20% !important;
     background-size: cover !important;
 	  text-align: center;
 	  padding-top: 5%;
-	  min-height: 70%;
+	  min-height: 440px;
 	h1{
             font-size: 3rem;
             color: $white;
@@ -566,7 +567,6 @@ header.header-main {
       right: 0;
       left: 0;
 		width: 100% !important;
-    //  min-height: 40%;
     }
 
     .grid-container{
@@ -656,10 +656,13 @@ header.header-main {
           padding: 1.5rem 0;
           .courses-listing-item{
             padding: 0 5%;
+			-webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+			-moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+			box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
             .cover-image{
-              height: 176px;
+              height: 200px;
               &:before{
-                height: 176px;
+                height: 200px;
               }
               .learn-more{
                 top: 62px;
@@ -1121,8 +1124,89 @@ header.header-main {
   }
 }
 
+
+
 //Footer
 
+.footer-main{
+	background-color: #242424;	
+  padding: 2em 0;
+  .logo{
+    margin-bottom: 1em;
+  }
+	
+	.row {
+	width: 100%;
+  	margin: 0 auto;
+  	position: relative;
+  	text-align:center;
+	vertical-align: top;
+	
+}
+
+
+.col {
+	display:inline-block;
+ 	 margin: 10px;
+	width: 300px;
+	vertical-align: top;
+	
+}
+	
+	
+	
+  ul{
+    list-style: none;
+    margin-left: 1.5em;
+	  text-align: left !important;
+    li{
+    color: #a29c9a;
+	font-weight: lighter;
+	font-size: 14px;
+    padding: .3em 0;
+      a{
+        color: #a29c9a !important;
+		 font-weight: lighter;
+        &:hover{
+          color: #e0e0e0 !important;
+          text-decoration: none;
+        }
+      }
+      &:first-child{
+		color: #bfbfbf !important; 
+		text-transform:  uppercase;
+		  font-size: 16px;
+      }
+      &:last-child{
+        margin-bottom: 2em;
+      }
+    }
+  }
+  .footer-logo{
+    text-align: center;
+    img{
+      margin-bottom: 1.5rem;
+      width: auto;
+      height: 44px;
+    }
+  }
+  .open-edx-logo{
+    ul{
+      li{
+        text-align: left;
+        img{
+          max-width: 80%;
+        }
+      }
+    }
+  }
+}
+
+
+
+
+// OLD Footer
+/*
 .footer-main{
   padding: 2em 0;
   border-top: 3px solid $course-section-background-color;
@@ -1170,6 +1254,8 @@ header.header-main {
     }
   }
 }
+*/
+
 
 // Shopping Cart
 
@@ -1340,8 +1426,13 @@ header.header-main {
     }
   }
   .footer-main{
+	  background-color: $dark;
+	  color: $light;
     .footer-logo{
       text-align: left;
+		img {
+			max-height: 60px;
+		}
     }
     .open-edx-logo{
       ul{
