--- a/ck-theme/lms/templates/courses_list.html
+++ b/ck-theme/lms/templates/courses_list.html
@@ -14,8 +14,7 @@
             <div class="row">
               <div class="col col-12 text-center">
                 <h2>
-                  <span class="course-list-heading"> Lorem ipsum dolor sit amet</span>
-                </h2>
+                  <span class="course-list-heading"> Click on any course to learn more</span></h2>
               </div>
             </div>
 
