--- a/ck-theme/lms/templates/footer.html
+++ b/ck-theme/lms/templates/footer.html
@@ -2,57 +2,68 @@
 <%page expression_filter="h"/>
 <%namespace name='static' file='static_content.html'/>
 
+<style>
+  @import url("https://use.typekit.net/ruh6gmc.css");
+</style>
 <section class="footer-main">
-<div class="grid-manual grid-container">
-  <div class="row">
-    <div class="col col-12 sm-col-12 md-col-4 footer-logo">
-      <ul>
-          <li><a href="/"><img src="http://placehold.it/190x60" alt="Logo" /></a></li>
-          <li><a href="#">More about Lorem Ipsum</a></li>
-      </ul>
-    </div>
-    <div class="col col-12 sm-col-12 md-col-4">
-      <div class="col col-6">
-      <ul>
-        <li>About</li>
-        <li><a href="/about">About this Site</a></li>
-        <li><a href="/faq">FAQ</a></li>
-        <li><a href="/contact">Contact Us</a></li>
-      </ul>
-    </div>
+  <div class="grid-manual grid-container">
+    <div class="row">
+      <div class="col footer-logo">
+        <ul>
+          <li><a href="/"><img src="${static.url('images/logo_small.png')}" alt="Combined Knowledge" /></a></li>
+        </ul>
+      </div>
+	  </div>
+      
+		<div class="row">
+        <div class="col">
+          <ul>
+            <li>About</li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/about-us/" target="_blank">About Combined Knowledge</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/contact-us/" target="_blank">Contact Us</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/terms-and-conditions/" target="_blank">Terms of Service</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul>
+            <li>Solutions</li>
+            <li><a href="https://www.combined-knowledge.com/index.php/training-courses/find-a-course/" target="_blank">Instructor Led training</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/learning-support-tools/office_365_trainingplus/" target="_blank">Training+ App</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/learning-support-tools/support-2/" target="_blank">Support+ App</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/learning-support-tools/office/" target="_blank">Office+ Office 365 Add-In</a></li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/learning-support-tools/cbt-2/" target="_blank">CBT</a></li>
+          </ul>
+        </div>
+      
 
-    <div class="col col-6">
-      <ul>
-        <li>Support</li>
-        <li><a href="/tos">Terms of Service</a></li>
-        <li><a href="/privacy">Privacy Policy</a></li>
-        <li><a href="/honor">Honor Code</a></li>
-      </ul>
+        <div class="col">
+          <ul>
+            <li>Connect</li>
+            <li><a href="https://www.combined-knowledge.com/index.php/home/contact-us/">Contact Us</a></li>
+            <li>T: +44 (0)1455 200 520<br>
+				E: <a href="mailto:sales@combined-knowledge.com">sales@combined-knowledge.com</a></li>
+          </ul>
+              <table style="width: 200px; margin: 0 auto;">
+                <tbody>
+                  <tr>
+                    <td style="width: 25%;"><a href="https://www.facebook.com/pages/Combined-Knowledge-Ltd/130405933644168"><img class="alignnone wp-image-26625 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/011.png" alt="" width="25" height="25" /></a></td>
+                    <td style="width: 25%;"><a href="https://twitter.com/ckukltd"><img class="alignnone wp-image-26626 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/021.png" alt="" width="25" height="25" /></a></td>
+                    <td style="width: 25%;"><a href="http://www.youtube.com/user/combinedknowledge"><img class="alignnone wp-image-26629 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/05.png" alt="" width="25" height="25" /></a></td>
+                    <td style="width: 25%;"><a href="http://www.linkedin.com/company/113488?trk=tyah&amp;trkInfo=tarId%3A1400000150305%2Ctas%3ACombined%20K%2Cidx%3A1-1-1"><img class="alignnone wp-image-26659 size-full" src="https://www.combined-knowledge.com/wp-content/uploads/2017/10/LinkedIn-icon_small.png" alt="" width="25" height="25" /></a></td>
+                  </tr>
+                </tbody>
+              </table>
+            
+        </div>
+		</div>
+	  <div class="row">
+        <div class="col open-edx-logo">
+          <ul>
+            <li> <a href="https://open.edx.org"> <img src="${static.url('images/openedx-logo-tag.png')}" alt="openedx-logo" /> </a> </li>
+          </ul>
+        </div>
+	  </div>
+      
     </div>
-    </div>
-    <div class="col col-12 sm-col-12 md-col-4">
-      <div class="col col-6">
-      <ul>
-        <li>Connect</li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#">YouTube</a></li>
-      </ul>
-    </div>
-
-    <div class="col col-6 open-edx-logo">
-      <ul>
-        <li>
-          <a href="https://open.edx.org">
-            <img src="${static.url('images/openedx-logo-tag.png')}" alt="openedx-logo" />
-          </a>
-        </li>
-      </ul>
-    </div>
-    </div>
-
-
   </div>
-</div>
 </section>
