modified:   ck-theme/lms/static/sass/_overrides.scss 	modified:   ck-theme/lms/templates/index.html

--- a/ck-theme/lms/static/sass/_overrides.scss
+++ b/ck-theme/lms/static/sass/_overrides.scss
@@ -1148,8 +1148,8 @@ header.header-main {
 
 
 .col {
-	display:inline-block;
- 	 margin: 10px;
+	display:inline-block !important;
+ 	margin: 10px;
 	width: 300px;
 	vertical-align: top;
 	
